# SanMapEditor

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.zh.md  CONTRIBUTING.zh.md  LICENSE  NOTICE.zh.md  README.md  SECURITY.md  findings.md  progress.md  pyproject.toml  task_plan.md
.github/: dependabot.yml  pull_request_template.md
data/: README.zh.md
docs/: COMMAND_REFERENCE.zh.md  DOCUMENT_INDEX.zh.md  DOC_WORKFLOW.zh.md  EDITOR_CONTENT_PACK.zh.md  EDITOR_CURRENT_GOAL.zh.md  EDITOR_DATA_MANAGEMENT.zh.md  EDITOR_FIELD_CONVERSION.zh.md  EDITOR_PACKAGING_CHAIN.zh.md  EDITOR_RESOURCE_FREE_RELEASE_PLAN.zh.md  EDITOR_UI_V2_DESIGN.zh.md  EDITOR_USER_GUIDE.zh.md  FORMAT_NOTES.md  FORMAT_NOTES.zh.md  GITHUB_RELEASE_CHECKLIST.zh.md  KNOWN_ISSUES.zh.md  MINIMAP_COLOR_RELATION.zh.md  PROJECT_HISTORY.zh.md
tests/: __init__.py  sample_support.py  test_apply_editor_patch_minimap.py  test_assets.py  test_command_registry.py  test_editor_app_new_site_export.py  test_editor_app_runtime_behaviors.py  test_editor_app_v2.py  test_editor_build_metadata.py  test_editor_content_pack.py  test_editor_desktop_launcher.py  test_editor_documentation.py  test_editor_release_audit.py  test_editor_resource_free_build.py  test_editor_resource_free_ui.py  test_editor_runtime_bundle.py  test_editor_runtime_session.py  test_editor_runtime_text_independence.py  test_map_editor_model.py  test_minimap_color_relation.py  test_minimap_sidecar_builder.py  test_project_paths.py  test_scenario_text_codec.py  test_stage_file_models.py  test_stage_ini_block_layout.py  test_stage_ini_compatibility_roundtrip.py  test_stage_site_links.py  test_stg_editor_patch.py  test_stg_field_values.py  test_stg_json_roundtrip.py  test_stg_troop_analysis.py  test_stg_workbook_roundtrip.py
tools/: __init__.py  __main__.py  _legacy_wrapper.py  analyze_assets.py  analyze_dor.py  analyze_dor_byte_fields.py  analyze_dor_relationship.py  analyze_evt_resources.py  analyze_m_byte_fields.py  analyze_minimap_sidecars.py  analyze_stage_sidecars.py  analyze_stg_family_alignment.py  apply_editor_patch.py  build_minimap_sidecars.py  build_stage_ini.py  build_stage_ini_from_txt_workbook.py  command_registry.py  convert_game_texts.py  editor_app.html  encode_convert.py  export_editor_bundle.py  palette.py  (+24 more)
(+67 files in other folders)
