[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "san-map-tools"
version = "0.1.0"
description = "三国霸业地图逆向、导出与编辑工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1,<4",
]

[project.scripts]
san-tools = "tools.__main__:main"

[tool.setuptools]
packages = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tools"]
python_files = ["test_*.py"]