[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "san-map-tools"
version = "0.1.0"
description = "三国霸业地图逆向、导出与编辑工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1,<4",
  "Pillow>=10,<12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
release = [
  "pyinstaller>=6,<7",
]

[project.scripts]
san-tools = "san_tools.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["san_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
